--- a/final_report/final-report.tex
+++ b/final_report/final-report.tex
@@ -214,13 +214,12 @@
 This project supports our partner,
 \href{https://www.heymate.ca}{``heymate!''}(hereafter referred to as
 \emph{Heymate}), in delivering data-driven menu insights to their
-restaurant clients. Leveraging over 3 million popularity records and the
-power of large language models, we developed a structured data cleaning
-pipeline and generated a weighted scoring mechanism to identify
-top-performing dishes. The final product includes a scalable
-recommendation system that suggests the most popular menu items based on
-restaurant type, enabling merchants to optimize their offerings with
-minimal technical effort.
+restaurant clients. Using 3 million popularity records and large
+language models(LLMs), we developed a structured data cleaning pipeline
+and generated a weighted scoring mechanism to identify top-performing
+dishes. The final product includes a scalable recommendation system that
+suggests the most popular menu items based on restaurant type, enabling
+merchants to optimize their offerings with minimal technical effort.
 
 \section{Introduction}\label{introduction}
 
@@ -281,9 +280,10 @@ Workflow)}\label{model-input-pipeline-horizontal-workflow}
 \def\labelenumi{\arabic{enumi}.}
 \tightlist
 \item
-  Data Ingestion: After researching across multiple open-source
-  datasets, we found a Uber Eats dataset from Kaggle covers a wide range
-  of restaurant types, menu items, and their corresponding descriptions.
+  Data Ingestion: As mentioned in the
+  \hyperref[introduction]{Introduction}, we used a Uber Eats dataset
+  from Kaggle that covers diverse restaurant types, menu items, and
+  descriptions.
 \item
   Feature Engineering: As the raw dataset was quite messy, it needed to
   undergo a series of preprocessing and standardization process so that
@@ -316,6 +316,8 @@ Workflow)}\label{testing-and-production-pipeline-vertical-workflow}
   on the results.
 \end{enumerate}
 
+\newpage
+
 \section{Transition from Framework to Data
 Product}\label{transition-from-framework-to-data-product}
 
@@ -339,13 +341,11 @@ a clean, consistent, and high-quality model input dataset.
 \tightlist
 \item
   \textbf{Data Quality and Inconsistencies:} The raw Uber Eats data
-  contains more than 5 million menu records, but it presented
-  significant quality issues (shown in Table~\ref{tbl-null-entries}),
-  including missing critical metrics, formatting inconsistencies, posing
-  a major challenge in popularity score calculation. Therefore, we
-  implemented preprocessing logic to remove all these incomplete,
-  duplicated, or other invalid menu records, which results in around 3.2
-  million records for next step.
+  contains more than 5 million menu records, but had quality issues
+  (shown in Table~\ref{tbl-null-entries}), including missing metrics and
+  inconsistent formatting. Therefore, we implemented preprocessing logic
+  to remove all these incomplete, duplicated, or other invalid menu
+  records, which results in around 3.2 million records for next step.
 \end{enumerate}
 
 \begin{longtable}[]{@{}lr@{}}
@@ -376,30 +376,16 @@ price & 160 \\
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
 \setcounter{enumi}{1}
-\tightlist
 \item
   \textbf{Large-Scale Data Processing:} Even after preprocessing, the
-  dataset still contained over \textbf{3 million} records, making full
-  in-memory processing impractical due to runtime and memory
-  constraints. To ensure scalability, we implemented batch processing by
-  retrieving indexed chunks and deployed it via a Flask framework with
-  multithreaded API calls for concurrent execution.
-\end{enumerate}
-
-\newpage
-
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi}.}
-\setcounter{enumi}{2}
-\tightlist
+  dataset still contained over \textbf{3 million} records. Details of
+  our deployment approach are discussed in the
+  \hyperref[distributed-deployment]{Data Science Methods} section.
 \item
-  \textbf{Menu Naming Variability:} The biggest challenge was the
-  inconsistent naming of similar dishes, for example, ``seafood fried
-  rice'' appeared in various forms and languages
-  (Figure~\ref{fig-seafood-fried-rice-var}). This hindered similarity
-  comparisons and recommendation accuracy. To address this, we used
-  OpenAI's GPT API for semantic standardization, enhancing consistency
-  and model performance.
+  \textbf{Menu Naming Variability:} Inconsistent naming of similar
+  dishes (e.g., various forms of ``seafood fried rice'') made it
+  difficult to compare and group items. We address this challenge in
+  detail in the \hyperref[data-cleaning-module]{Data Cleaning Module}.
 \end{enumerate}
 
 \begin{figure}
@@ -414,6 +400,8 @@ Variation}
 }
 
 \end{figure}%
+
+\newpage
 
 \subsubsection{Solution Pipeline}\label{solution-pipeline}
 
@@ -437,22 +425,20 @@ integrated into a unified data pipeline
 \def\labelenumi{\arabic{enumi}.}
 \tightlist
 \item
-  Data Cleaning: Due to inconsistencies in the raw menu data from Uber
-  Eats, we implemented preprocessing procedures. Since dishes were named
-  differently across restaurants, we developed a semantic
-  standardization pipeline powered by the GPT API to normalize dish
-  names and group similar items under unified labels.
+  \textbf{Data Cleaning}: To handle naming inconsistencies across
+  restaurants, we used a GPT-powered semantic standardization pipeline
+  to group similar items under unified labels (details in
+  \hyperref[data-cleaning-module]{Data Cleaning Module}).
 \item
-  Cleaning Deployment: This standardization process was deployed using a
-  Flask-based batch-processing mechanism to enable concurrent
-  processing. The Heymate engineering team will explore Azure as a
-  potential option for faster and automated deployment. Each batch of
-  raw data was processed and uploaded to generate a cleaned dataset.
+  \textbf{Cleaning Deployment}: The cleaning pipeline runs in batches
+  via a Flask-based batch-processing mechanism for parallel execution.
+  Each batch of raw data was processed and uploaded to generate a
+  cleaned dataset.
 \item
-  Scoring and Knowledge Base: Once the data was standardized, we joined
-  each menu item with key popularity metrics. This aggregated table will
-  be stored and used to calculate popularity scores, which will be
-  discussed in detail in a later section.
+  \textbf{Scoring and Knowledge Base}: Cleaned items are merged with key
+  popularity metrics to build an aggregated table for popularity score
+  computation (details in
+  \hyperref[recommendations-algorithm]{Recommendation Algorithm}).
 \end{enumerate}
 
 For the model testing dataset (Figure~\ref{fig-testing-pipline}), the
@@ -524,12 +510,9 @@ issues:
 
 \end{figure}%
 
-Without resolving these issues, it would have been impossible to run any
-structured analysis across restaurants at scale. Since our project
-timeline are relatively tight, we decided to utilize GPT API as it can
-achieve semantic inference, format alignment, as well as language
-processing in a more efficient manner while maintaining relativeky great
-quality. Therefore, we developed a prompt-engineering pipeline that
+Due to limited time, we decided to utilize GPT API as it can achieve
+semantic inference, format alignment, as well as language processing
+more efficiently while maintaining quality. We developed prompts that
 includes two main parts:
 
 \begin{enumerate}
@@ -645,40 +628,18 @@ we filter out all entries flagged as combos
 (\texttt{is\_combo\ ==\ True}). The resulting dataset serves as the
 foundation for our \textbf{core knowledge base}.
 
-\subsection{Normalize Matrix}\label{normalize-matrix}
-
-For popularity score calculation, as the raw values of frequency or
-rating counts can be heavily skewed or on different scales. We applied
-\textbf{MinMaxScaler} to rescale them to the {[}0, 1{]} range to ensure
-that the three indicators (rating counts, rating scores, frequency) are
-comparable and balanced.
-
-Normalized columns include:
-
-\begin{itemize}
-\tightlist
-\item
-  \texttt{freq\_scaled}: normalized frequency of the dish
-\item
-  \texttt{rating\_scaled}: normalized count of user ratings
-\item
-  \texttt{score\_scaled}: normalized average user rating
-\end{itemize}
-
-This step creates a uniform basis for computing the final popularity
-score.
-
 \subsection{Compute Popularity Score}\label{compute-popularity-score}
 
-We calculate a weighted popularity score for each dish as follows:
+We applied \textbf{MinMaxScaler} to rescale frequency, rating count, and
+rating score to a {[}0, 1{]} range. We then calculate a weighted
+popularity score for each dish as follows:
 
 \texttt{popularity\_score\ =\ (0.2\ *\ freq\_scaled\ +\ 0.6\ *\ rating\_scaled\ +\ 0.2\ *\ score\_scale)}
 
-These weights were selected based on exploratory testing and domain
-intuition from the partner, prioritizing the number of reviews as a
-strong signal of customer engagement, an approach supported by industry
-practices/research in similar recommendation systems (Chitalia (2023)
-Al-Rubaye and Sukthankar (2020))
+Weights were selected based on testing and partner input, prioritizing
+review count as a signal of engagement, an approach supported by
+industry practices/research in similar recommendation systems (Chitalia
+(2023) Al-Rubaye and Sukthankar (2020)).
 
 \begin{itemize}
 \tightlist
@@ -729,31 +690,6 @@ At recommendation time, the system:
 
 Finally, the top N dishes (configurable) are returned as output.
 
-\subsubsection{Clarification on Filtering
-Scope}\label{clarification-on-filtering-scope}
-
-Our system currently supports \textbf{structured filtering only}, based
-on exact matches of up to three \texttt{restaurant\_type\_std} values
-(e.g., ``pizza restaurant'') extracted during LLM cleaning. This design
-prioritizes transparency, control, and speed, aligning with early-stage
-deployment best practices in popularity-based recommenders (Sreekala
-2020).
-
-At this stage, we \textbf{do not support}:
-
-\begin{itemize}
-\tightlist
-\item
-  Keyword-based filtering (e.g., ``pepperoni'')
-\item
-  Semantic matching (e.g., ``comfort food'')
-\item
-  GPT-based fuzzy search
-\end{itemize}
-
-These advanced features were deliberately excluded due to the lack of
-labeled user intent and to maintain a clear and efficient MVP.
-
 \section{Example Use Case: Recommending for a Pizza
 Restaurant}\label{example-use-case-recommending-for-a-pizza-restaurant}
 
@@ -765,22 +701,10 @@ scores each based on its normalized rating score, frequency, and rating
 count. The weighted score is then used to rank the items, returning the
 top 10 most relevant dishes.
 
-As shown in the figure below Figure~\ref{fig-rec-example}, the
-top-ranked items for a pizza restaurant include popular classics such
-as:
-
-\begin{itemize}
-\tightlist
-\item
-  Pizza (cheese) and Pizza (pepperoni) --- widely rated and highly
-  frequent across menus.
-\item
-  Pizza (meat lover) and Spaghetti (meatball) --- dishes with consistent
-  performance.
-\item
-  Less expected but still relevant items like Papadia (parmesan crust)
-  also appear due to strong metric combinations.
-\end{itemize}
+As shown in the figure below Figure~\ref{fig-rec-example}, the top items
+for a pizza restaurant include classics like pepperoni pizza, meat
+lover's pizza, and spaghetti. Less expected items like Papadia also rank
+highly due to strong metric combinations.
 
 \begin{figure}
 
@@ -845,19 +769,33 @@ menu decisions.
 
 \subsection{Internal Use}\label{internal-use}
 
-To ensure robustness before onboarding new clients, this internal setup
-enables iterative refinement of the pipeline: - Data Updates: Heymate
-staff can upload new datasets to evaluate updates and improvements. -
-Testing \& QA: Input client restaurant types to verify dish name
-cleaning and recommendation logic.
+This internal setup enables iterative refinement of the pipeline:
+
+\begin{itemize}
+\tightlist
+\item
+  Data Updates: Heymate staff can upload new datasets to evaluate
+  updates and improvements.
+\item
+  Testing \& QA: Input client restaurant types to verify dish name
+  cleaning and recommendation logic.
+\end{itemize}
 
 \subsection{Client Deployment}\label{client-deployment}
 
 To support merchants in aligning with current market trends, this tool
-enables data-driven menu decision-making: - Restaurant Type Input:
-Clients select a restaurant type (e.g., ``pizza restaurant''). -
-Recommended Output: The system returns a list of top recommended dishes
-based on aggregated popularity metrics from similar restaurants.
+enables data-driven menu decision-making:
+
+\begin{itemize}
+\tightlist
+\item
+  Restaurant Type Input: Clients select a restaurant type (e.g., ``pizza
+  restaurant'').
+\item
+  Recommended Output: The system returns a list of top recommended
+  dishes based on aggregated popularity metrics from similar
+  restaurants.
+\end{itemize}
 
 \section{Data Science Methods}\label{data-science-methods}
 
@@ -958,8 +896,7 @@ recommendations based on its internal knowledge.
 
 However, this approach has several clear limitations:
 
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi}.}
+\begin{itemize}
 \tightlist
 \item
   LLMs are transformer-based models and are not well-suited for handling
@@ -973,7 +910,7 @@ However, this approach has several clear limitations:
   up-to-date or domain-specific datasets. In contrast, our system is
   built on a dataset of over 3 million real menu records, providing a
   much more grounded and data-driven foundation for recommendations.
-\end{enumerate}
+\end{itemize}
 
 \section{Conclusions and
 Recommendations}\label{conclusions-and-recommendations}
@@ -1025,43 +962,32 @@ menu data into structured insights, several limitations remain:
 \begin{itemize}
 \tightlist
 \item
-  \textbf{Popularity Bias:} Our current popularity scoring system relies
-  on static metrics due to the lack of real transaction data. This makes
-  it a proxy measure and may not fully reflect true customer
-  preferences. The score could be further improved by incorporating
-  additional quantitative features like price, review volume, or order
-  frequency if available in the future.
+  \textbf{Popularity Bias:} The popularity score is based on static
+  metrics (e.g., rating count, average score, frequency) rather than
+  real transaction data, serving only as a proxy for customer
+  preference. Future versions could incorporate features like price or
+  order frequency to improve accuracy.
 \item
-  \textbf{Static Reference:} Our analysis is currently based on static
-  snapshots of menu data. Without timestamped records, we are unable to
-  capture how item popularity or menu composition evolves. This limits
-  our ability to detect trends such as seasonal specials or emerging
-  bestsellers.
+  \textbf{Lack of Temporal Insights:} The dataset lacks timestamped
+  records, limiting our ability to detect seasonal trends or menu
+  evolution over time.
 \item
-  \textbf{Hard Filtering:} Restaurant type filtering is an exact match
-  only (e.g.~``pizza restaurant''), limiting support for broader or
-  fuzzy queries like ``comfort food'' or ``date night meals''. A more
-  flexible filtering mechanism could improve the versatility of the
-  tool.
+  \textbf{Rigid Matching Logic:} Recommendations rely on exact
+  restaurant type matches, limiting support for fuzzy or semantic
+  queries like ``comfort food.'' This reduces flexibility for broader
+  user intents.
 \item
-  \textbf{Evaluation Challenge:} Due to limited deployment and lack of
-  real-time feedback from users, our validation process is based on
-  illustrative case studies (e.g.~the pizza restaurant example). While
-  useful for demonstration, A/B testing or real user feedback would be
-  necessary to confirm the real-world effectiveness of the tool.
+  \textbf{Limited Evaluation:} Current validation is based on case
+  studies due to a lack of real user feedback. A/B testing or real user
+  feedback would be necessary to confirm the effectiveness.
 \item
-  \textbf{Scalability Constraint:} Although our local pipeline performs
-  well, we haven't deployed it to Azure yet due to resource and security
-  constraints. As a result, the system is not yet scalable enough for
-  real-time or production use cases.
+  \textbf{Scalability Issues:} Azure deployment is pending due to
+  resource and security limitations. The pipeline is not yet scalable
+  enough for production use cases.
 \item
-  \textbf{Lack of Granular Personalization:} While our system
-  standardizes restaurant types (e.g.~``Chinese restaurant''), it does
-  not yet support finer-grained classification at the sub-type level
-  (e.g.~``Szechuan,'' ``Cantonese''). Additionally, the recommender
-  ignores important factors such as local popularity, pricing, and
-  user-specific preferences. These limitations reduce the system's
-  ability to deliver tailored insights for diverse audiences.
+  \textbf{Low Personalization:} The pipeline doesn't support sub-types
+  (e.g., ``Szechuan'') or consider local trends, pricing, or user
+  preferences, limiting personalization.
 \end{itemize}
 
 \subsection{Recommendations for
@@ -1070,33 +996,32 @@ Heymate}\label{recommendations-for-heymate}
 To evolve this prototype into a production-ready recommender, we
 recommend:
 
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi}.}
+\begin{itemize}
 \tightlist
 \item
-  Temporal Tracking: Incorporate timestamped data to uncover seasonal
-  patterns and trends.
+  \textbf{Temporal Tracking}: Incorporate timestamped data to uncover
+  seasonal patterns and trends.
 \item
-  Restaurant Feedback Loop: Integrate feedback from partner restaurants
-  to refine recommendations over time.
+  \textbf{Restaurant Feedback Loop}: Integrate feedback from partner
+  restaurants to refine recommendations over time.
 \item
-  Semantic Filtering: Support flexible, natural-language queries using
-  embeddings or GPT-powered matching.
+  \textbf{Semantic Filtering}: Support flexible, natural-language
+  queries using embeddings or GPT-powered matching.
 \item
-  Cloud Deployment: Deploy to Azure to support scalability and integrate
-  directly with Heymate's CRM system.
+  \textbf{Cloud Deployment}: Deploy to Azure to support scalability and
+  integrate directly with Heymate's CRM system.
 \item
-  Subtype Extraction: Enhance LLM outputs with more detailed tags
-  (e.g.~``spicy,'' ``gluten-free,'' ``vegan'') for deeper filtering.
+  \textbf{Subtype Extraction}: Enhance LLM outputs with more detailed
+  tags (e.g.~``spicy,'' ``gluten-free,'' ``vegan'') for deeper
+  filtering.
 \item
-  Evaluation Framework: Design structured evaluations using click data,
-  client interviews, or business KPIs to measure impact.
-\end{enumerate}
+  \textbf{Evaluation Framework}: Design structured evaluations using
+  click data, client interviews, or business KPIs to measure impact.
+\end{itemize}
 
-Our product lays a solid foundation for \textbf{scalable, transparent},
-and \textbf{explainable menu recommendations}. With further iteration,
-it can evolve into a dynamic and adaptive system that supports Heymate's
-long-term vision for partner success.
+Our product lays a foundation for scalable, transparent recommendations.
+With further iteration, it can evolve into a dynamic and adaptive system
+that supports Heymate's long-term vision for partner success.
 
 \newpage{}
 
@@ -1117,10 +1042,6 @@ Chitalia, A. 2023. {``Yelp Popularity Score Calculator.''}
 \bibitem[\citeproctext]{ref-sakib2023ubereats}
 Sakib, Ahmed Shahriar. 2023. {``Uber Eats USA Restaurants and Menus.''}
 \url{https://www.kaggle.com/datasets/ahmedshahriarsakib/uber-eats-usa-restaurants-menus}.
-
-\bibitem[\citeproctext]{ref-keshetti2020popularity}
-Sreekala, Keshetti. 2020. {``Popularity-Based Recommendation System.''}
-\url{https://www.researchgate.net/publication/355773477}.
 
 \end{CSLReferences}
 
