--- a/final_report/references.bib
+++ b/final_report/references.bib
@@ -29,3 +29,11 @@
   year         = {2020},
   url          = {https://ieeexplore.ieee.org/document/9458206}
 }
+
+@misc{azurefunctions,
+  author = {Microsoft},
+  year = {2024},
+  title = {Azure Functions Python Developer Guide},
+  url = {https://learn.microsoft.com/en-us/azure/azure-functions/functions-reference-python?tabs=get-started%2Casgi%2Capplication-level&pivots=python-mode-decorators},
+  note = {Accessed June 2025}
+}
